styles/main.css
@import "styles/font-awesome-4.6.3/css/font-awesome.css";
@import "styles/fontello-f41038ea/css/shirt.css";

/*
outer content
*/

* {
  list-style: none;
  box-sizing: border-box;
  font-family: sans-serif;
  font-weight: normal;
  color: lightblue;
}

.item-block {
  float: left;
  width: 27%;
  margin: 3%;
  position: relative;
}

/*
top half with big shirt and icon on upper right
*/

.fa-undo {
  position: absolute;
  top: 0;
  right: 0;
  border-bottom: 2px solid lightblue;
  padding: 1%;
  z-index: 2;
  border-left: 2px solid lightblue;
}

.shirt-container {
  position: relative;
  perspective: 1000px;
  width: 326px;
  height: 324px;
}

/*
the big shirt itself
*/

.big-shirt,
.back-of-shirt {
  width: 313px;
  padding: 5%;
  height: 290px;
  top: 14px;
  left: 14px;
  backface-visibility: hidden;
}

.big-shirt {
  position: absolute;
  opacity: 1;
  z-index: 2;
  background-size: contain;
  transform: rotateY(0deg);
}

.big-shirt-blue {
  background: url(../images/shirts/blue-front.png) no-repeat;
  background-size: contain;
}

.big-shirt-pink {
  background: url(../images/shirts/pink-front.png) no-repeat;
  background-size: contain;
}

.big-shirt-yellow {
  background: url(../images/shirts/yellow-front.png) no-repeat;
  background-size: contain;
}

.back-of-shirt {
  position: absolute;
  opacity: 1;
  top: 12px;
  transform: rotateY(180deg);
}

.back-of-shirt-blue {
  background: url(file:///Users/marianpowell/Documents/T-Shirt%20Shop/images/shirts/blue-back.png) no-repeat;
  background-size: contain;
}

.back-of-shirt-pink {
  background: url(file:///Users/marianpowell/Documents/T-Shirt%20Shop/images/shirts/pink-back.png) no-repeat;
  background-size: contain;
}

.back-of-shirt-yellow {
  background: url(file:///Users/marianpowell/Documents/T-Shirt%20Shop/images/shirts/yellow-back.png) no-repeat;
  background-size: contain;
}

.flip {
  backface-visibility: hidden;
  transition-duration: 1s;
  transform-style: preserve-3d;
  transform-origin: 52%;
  position:relative;
  width: 326px;
  height: 325px;

}

/*
spinning the big shirt around
*/

  .fa-undo:hover ~ .shirt-container .flip {
    animation: flip-shirt 1.75s infinite ease-in-out;
}

@keyframes flip-shirt {
    0% {
      transform: rotateY(0deg);
    }
    25% {
      transform: rotateY(-180deg);
    }
    50% {
      transform: rotateY(-180deg);
    }
    75% {
      transform: rotateY(0deg);
    }
    100% {
      transform: rotateY(0deg);
    }
}

/*
big shirt along with the icon strip below
*/

.shirt-with-boxes {
  position: relative;
  margin: 0;
  padding: 0;
  border: 2px solid lightblue;
  width: 330px;
  height: 403px;
}

/*
bottom strip of small icons
*/

.empty-square {
  background: tranparent;
  opacity: 0;
  position: absolute;
  color: black;
  z-index: 3;
  font-size: 64px;
  font-style: normal;
  top: 3px;
  right: 80px;
  transition: opacity .2s linear;
}

.tiny-box {
  float: left;
  width: 20%;
  line-height: 4rem;
  border-left: 2px solid lightblue;
}

.tiny-box .fa {
  font-family: FontAwesome;
  padding-left: 22px;
  padding-top: 25px;
  font-size: 1.5rem;
}

.xl .fa {
  font-family: sans-serif;
}

.bottom-icon-strip {
  float: left;
  position: absolute;
  width: 328px;
  margin: 0;
  padding: 0;
  top: 324px;
  left: -2px;
  border-top: 2px solid lightblue;
}

/*
description and price
*/

h2 {
  padding-top: 15%;
  padding-top: 28%;
  font-size: 1.3rem;
}

.price,
.description {
  font-style: normal;
}

.description {
  float: left;
  display: block;
  position: absolute;
  top: 321px;
}

.price {
  float: right;
  display: inline-block;
  position: absolute;
  top: 321px;
  right: 5px;
}

.price:before {
  content: "$";
}

/*
color tranformations
*/

.fa-undo:hover {
  background: lightblue;
  color: white;
}

.tiny-box:hover .fa,
.tiny-box:hover,
.tiny-box.fa:hover {
  background: lightblue;
  color: white;
}

/*
triangles, aka diamonds
*/

.triangle {
  color: white;
  background: translucent;
}

/*
Size pop-up
*/

.size-container {
  position: absolute;
  z-index: 8;
  top: -276%;
  right: 38%;
  background: white;
  opacity: 0;
  transition: opacity 0.5s ease;
  width: 76px;
}

.size-container ul {
  border: 2px solid lightblue;
  padding: 2%;
}

.size-container ul li {
  line-height: 2.5rem;
}

.size-container .triangle {
  position: absolute;
  top: 177px;
  left: 30px;
  color: white;
  font-size: 1.5rem;
}

.xl-shirt {
  position: relative;
  font-size: 3rem;
}

.size-on-xl {
  position: absolute;
  font-size: 1rem;
  top: 11px;
  left: 24px;
}

.l-shirt {
  position: relative;
  font-size: 2.5rem;
  padding-left: 5px;
}

.size-on-l {
  position: absolute;
  font-size: 0.9rem;
  top: 6px;
  left: 29px;
}
.m-shirt {
  position: relative;
  font-size: 2rem;
  padding: 10px;
}

.size-on-m {
  position: absolute;
  font-size: 0.7rem;
  top: 11px;
  left: 28px;
}
.s-shirt {
  position: relative;
  font-size: 1.6rem;
  padding: 23%;
}

.size-on-s {
  position: absolute;
  font-size: .7rem;
  top: 12px;
  left: 28.5px;
}

/*
color-popup
*/

.color-container {
  border: 2px solid lightblue;
  position: absolute;
  z-index: 8;
  right: 62.1px;
  top: -73px;
  height: 71px;
  width: 72px;
  background: white;
  opacity: 0;
  transition: opacity 0.5s ease;
}

.color-container span {
  line-height: 0;
  display: inline-block;
  position: absolute;
  font-size: 24px;
  float: left;
}

.topleft {
  top: 19px;
  left: 9px;
}

.topright {
  top: 19px;
  left: 37px;
}

.bottomleft{
  top: 50px;
  left: 9px;
}

.bottomright {
  top: 50px;
  left: 37px;
}

.blue {
  color: #81bce5;
}

.pink {
  color: #d583ac;
}

.yellow {
  color: #deb17e;
}

.green {
  color: #8bb992;
}

.color-container .triangle {
  position: absolute;
  top: 67px;
  left: 27px;
  line-height: 2px;
}

/*
pop-up tranformations
*/

.xl:hover .size-container {
  opacity: 1;
  border-bottom: none;
}

.xl:hover {
  border-top: none;
}

.color:hover .color-container {
  opacity: 1;
  border-bottom: none;
}

.color:hover {
  border-top: none;
}

